unpackaged/main/default/objects/Theory_Class_Schedule__c/Theory_Class_Schedule__c.object-meta.xml
<CustomObject>
    <description>capture Theory Class Schedule</description>
    <label>ETDI Theory Class Schedule</label>
    <nameField>
        <displayFormat>Th-{0000}</displayFormat>
        <label>Theory Class Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ETDI Theory Class Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>