unpackaged/main/default/objects/Theory_Class_Schedule__c/fields/Course_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Course Date</label>
    <type>Date</type>
</CustomField>