unpackaged/main/default/objects/Theory_Class_Schedule__c/fields/Course_Time__c.field-meta.xml
<CustomField>
    <fullName>Course_Time__c</fullName>
    <label>Course Time</label>
    <type>Time</type>
</CustomField>