unpackaged/main/default/objects/Theory_Class_Schedule__c/fields/Course_Title__c.field-meta.xml
<CustomField>
    <fullName>Course_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Course Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>