unpackaged/main/default/objects/Theory_Class_Schedule__c/fields/ETDI_Detail__c.field-meta.xml
<CustomField>
    <fullName>ETDI_Detail__c</fullName>
    <label>ETDI Detail</label>
    <referenceTo>ETDI_Detail__c</referenceTo>
    <relationshipLabel>ETDI Theory Class Schedules</relationshipLabel>
    <relationshipName>Theory_Class_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>